--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <img class="align-self-start mr-3 float-left" src="assets/bolo1.svg" alt="">
             </div>
             <div class="cor_fundo col-md-9">
-                <p class="float-right p-2 text-danger">R$20</p>
+                <p class="float-right p-2 text-white">R$20</p>
                 <h2 class="">Bolo branco</h2>
                 <p class=""> Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo,
                     tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
@@ -60,7 +60,7 @@
                 <img class="align-self-start mr-3 float-left" src="assets/bolo2.svg" alt="">
             </div>
             <div class="cor_fundo col-md-9">
-                <p class="float-right p-2 text-danger">R$32</p>
+                <p class="float-right p-2 text-white">R$32</p>
                 <h2 class="">Bolo de chocolate</h2>
                 <p class=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ratione assumenda
                     molestias nostrum, ut tempora unde eveniet! Deleniti, non eos quibusdam, iste dignissimos culpa
@@ -72,7 +72,7 @@
                 <img class="align-self-start mr-3 float-left" src="assets/bolo3.svg" alt="">
             </div>
             <div class="cor_fundo col-md-9">
-                <p class="float-right p-2 text-danger">R$48</p>
+                <p class="float-right p-2 text-white">R$48</p>
                 <h2 class="">Bolo de morango</h2>
                 <p class=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora distinctio quis illo
                     dignissimos reiciendis officiis excepturi rerum totam, voluptate consectetur vero voluptas fuga
@@ -84,7 +84,7 @@
                 <img class="align-self-start mr-3 float-left " src="assets/bolo4.svg" alt="">
             </div>
             <div class="cor_fundo col-md-9">
-                <p class="float-right p-2 text-danger">R$25</p>
+                <p class="float-right p-2 text-white">R$25</p>
                 <h2 class="">Bolo de paçoca</h2>
                 <p class=""> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur similique, aspernatur
                     veritatis excepturi, fuga harum inventore nihil totam neque aliquid rerum iste fugiat odit enim
@@ -96,7 +96,7 @@
                 <img class="align-self-start mr-3 float-left" src="assets/bolo5.svg" alt="">
             </div>
             <div class="cor_fundo col-md-9">
-                <p class="float-right p-2 text-danger">R$38</p>
+                <p class="float-right p-2 text-white">R$38</p>
                 <h2 class="">Bolo de sundae</h2>
                 <p class=""> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia nisi optio, molestias
                     culpa atque, incidunt quos eaque aliquid magnam debitis id modi architecto a ea fuga veniam vero
@@ -107,7 +107,7 @@
                 <img class="align-self-start mr-3 float-left" src="assets/bolo6.svg" alt="">
             </div>
             <div class="cor_fundo col-md-9">
-                <p class="float-right p-2 text-danger">R$54</p>
+                <p class="float-right p-2 text-white">R$54</p>
                 <h2 class="">Bolo de brigadeiro</h2>
                 <p class=""> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium explicabo est ratione
                     nisi perspiciatis, expedita amet aliquid itaque impedit unde fuga consequatur in recusandae maiores.
